hard-gists/3047772/run.log
=== Docker Run Log for 3047772 ===
Started at: Mi 29. Okt 13:38:59 CET 2025

[2025-10-29 13:38:59] START: Running container for 3047772
[2025-10-29 13:38:59] SUCCESS: Container 3786793fa9480449e87d5902f5619ffffc8cc3c647fa8b76890484211aaa0f9d started for 3047772
=== Container logs for 3047772 ===
  File "/snippet.py", line 10
    print mol.calcfp('MACCS') 
    ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3047772 ===
[2025-10-29 13:39:02] INFO: Container 3786793fa9480449e87d5902f5619ffffc8cc3c647fa8b76890484211aaa0f9d has stopped
